
	Properly execute tests against the correct modules

	* tests/Makefile.am: also use the script from the demos folder
	* tests/sapwood-wrapper: point to the correct module

2009-01-16  Sven Herzberg  <sven@imendio.com>

	Comment out my hildon-specific hack in the server wrapper file

	* tests/sapwood-wrapper: drop this

2009-01-08  Sven Herzberg  <sven@imendio.com>

	Test if the server can run the buttonbox demo

	* demos/Makefile.am: added the buttonbox to the tests
	* demos/buttonbox.c (main): return after showing the window if a
	proper environment variable was set

2009-01-08  Sven Herzberg  <sven@imendio.com>

	Compile against a vanilla GTK+

	* tests/double-free.c: GTK+ 2.14 doesn't allow including
	<gtk/gtktestutils.h>; Maemo-GTK doesn't include it in <gtk/gtk.h>; so
	we need this version check here

2009-01-08  Sven Herzberg  <sven@imendio.com>

	Updated to the refactored paths.

	* demos/run-demo: replaced src by engine, as this is where the engine
	is built now

2008-09-08  Sven Herzberg  <sven@imendio.com>

	Created cache_node_ref()

	* server/cache-node.c (cache_node_ref): added new function
	* server/cache-node.h: added new prototype
	* server/sapwood-server.c (process_buffer): use the cache_node_ref()
	function

2008-09-08  Sven Herzberg  <sven@imendio.com>

	Moved memory management for CacheNode into separate files; now we have
	two well-specified locations left for allocation and free of CacheNode

	* server/Makefile.am: build the new files, too
	* server/cache-node.c (cache_node_free), (cache_node_new): added new
	functions
	* server/cache-node.h: have the structure definition here; added
	declarations of the new functions
	* server/sapwood-server.c (process_buffer),
	(cleanup_pixmap_destroy): replace the code to create/free an object
	with proper function calls

2008-11-27  Sven Herzberg  <sven@imendio.com>

	Properly follow common memory management logic

	* engine/sapwood-style.c (enum_value_to_string): don't access stuff